--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,9 @@
         }
     ],
     "require": {
-        "composer/installers": ">=1.0.8"
-    },
-    "require": {
-        "php": ">=5.3.3",
-        "composer/installers": ">=1.0.8",
         "moment/moment": ">=2.14.1"
+    },
+    "extra": {
+        "installer-name": "calendar_ui"
     }
 }
