--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "moment/moment": ">=2.14.1"
+        "robloach/component-installer": "*"
     },
     "extra": {
         "installer-name": "calendar_ui"
